styles.css
:root {
  --font-family: monospace;
  --window-alpha: 0.8;
  --bar-height: calc(var(--font-size)*1.5);
  --content-min-width: 750px;
  --content-width: 65vw;
  --content-max-width: 900px;
  --content-height: 95vh;
  --content-max-height: 1200px;
  --content-inner-max-width: 670px;
  --gutter-width: 2.5em;
  --scroll-block-width: 2.5em;
  --list-indent-width: 2em;
  --keybinding-display-width: 8em;
  --list-marker-width: 3em;
  --line-height: 20px;
  --font-size: 1rem;

  --spacing-xsm: 0.35em;
  --spacing-sm: 0.7em;
  --spacing: 1em;
  --spacing-lg: 1.5em;

  --z-index-content: 100;
  --z-index-gutter: 90;
  --z-index-fixed: 150;
}

body.default-theme {
  --color-primary: #fecfc7;
  --color-secondary: #445d86;
  --color-background-light: #2f3332;
  --color-default-text: #ffffff;
  --color-accent-text: #333;
  --color-light-text: #e8e8e8;
  --color-secondary-text: #7493ff;
  --color-line-number: #7b7b7b;
  --color-border: #f0d1ce;
  --color-window: rgba(18, 18, 16, 0.91);
}

body {
  margin: 0;
  min-width: 320px;
  font-family: var(--font-family);
  font-size: var(--font-size);
  background-image: url('img/wallpaper.jpg');
  background-color: black;
  background-size: cover;
}

#page-wrapper {
  width: 100%;
  height: 100%;
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

#window {
  width: var(--content-width);
  min-width: var(--content-min-width);
  max-width: var(--content-max-width);
  height: var(--content-height);
  max-height: var(--content-max-height);
  border: 2px solid var(--color-border);
  display: flex;
  flex-direction: column;
  background-color: var(--color-window);
  box-shadow: 2px 2px 10px 1px #0000009c;
}

a, ol, ul, li, p, pre {
  line-height: var(--line-height);
  font-size: var(--font-size);
  margin: 0;
}

ol, ul {
  padding-left: var(--list-indent-width);
  margin-bottom: var(--line-height);
}

a, p, pre, textarea, button {
  color: var(--color-light-text);
}

em {
  color: var(--color-default-text);
}

/* p { */
/*   display: flex; */
/*   flex-direction: row; */
/* } */

a {
  font-size: var(--font-size);
  font-weight: bold;
  height: var(--line-height);
  display: inline-block;
  margin-right: calc(var(--line-height)/2);
  color: var(--color-primary);
}

h1:first-of-type, blockquote > p {
  margin-top: 0;
}

h1, h2, h3, h4, h5 {
  font-size: var(--font-size);
  line-height: var(--line-height);
  color: var(--color-default-text);
  margin: 0;
  margin-top: var(--line-height);
  text-transform: uppercase;
}

h1 {
  line-height: calc(var(--line-height)*2);
  font-size: var(--line-height);
}

h1::before, h2::before, h3::before, h4::before, h5::before,
h1::after, h2::after, h3::after, h4::after, h5::after {
  color: var(--color-secondary-text);
}

h3::before {
  content: '[ ';
}

h3::after {
  content: ' ]';
}

h2::before {
  content: '[[ ';
}

h2::after {
  content: ' ]]';
}

h1::before {
  content: '═════ ';
}

/* ▬▬ι═══════ﺤ */
h1::after {
  content: ' ═════';
}

input[type=checkbox] {
  -webkit-appearance: none;
  -moz-appearance:    none;
  appearance:         none;
  display: none; /* i dont feel like fixing this shit */
}

li::marker {
  color: var(--color-secondary-text);
  width: var(--list-marker-width);
}

button {
  border: none;
  font-family: var(--font-family);
  font-size: var(--font-size);
}

pre {
  display: flex;
}

img, video {
  max-width: 100%;
  object-fit: cover;
  height: auto;
  align-self: flex-start;
}

figure {
  margin: 0;
  display: flex;
  flex-direction: column;
}

figcaption {
  line-height: var(--line-height);
  text-align: center;
  font-size: calc(var(--font-size)*0.9);
}

a > img {
  max-width: 100%;
}

img + img {
	margin-top: var(--line-height);
}

blockquote {
  margin: var(--line-height) 0;
  font-style: italic;
  font-weight: bold;
  display: inline-flex;
}

blockquote, blockquote > p {
  color: var(--color-default-text);
}

blockquote::before {
  content: '--- ';
  color: var(--color-secondary-text);
  margin-right: var(--spacing-sm);
  display: inline-flex;
  align-items: center;
  min-width: 2em;
}

code > pre {
  padding-left: var(--line-height);
}

.tab {
  background-color: transparent;
  padding: 0 var(--spacing-sm);
  display: inline-flex;
  justify-content: center;
  align-items: center;
  height: var(--bar-height);
  font-size: var(--font-size);
}

.tab > span:first-of-type {
  margin-right: 0.5em;
}

.tab-active {
  background-color: var(--color-primary);
  color: var(--color-accent-text);
}

main {
  width: 100%;
  height: 100%;
  flex: 1;
  display: inline-flex;
  overflow-y: scroll;
  padding-top: calc(var(--line-height)/2);
  box-sizing: border-box;
  position: relative;
  scrollbar-width: none; /* hides the scrollbar in Firefox */
}

main::-webkit-scrollbar {
  display: none; /* webkit browsers implementation */
}

#gutter {
  width: var(--gutter-width);
  min-width: var(--gutter-width);
  height: auto;
  background-color: transparent;
  display: block;
  z-index: var(--z-index-gutter);
}

.line-number {
  color: var(--color-line-number);
  text-align: right;
  padding: 0;
  margin: 0;
  font-size: var(--font-size);
  line-height: var(--line-height);
}

#content {
  flex: 1;
  height: auto;
  color: var(--color-default-text);
  padding: 0 var(--line-height);
  font-size: var(--font-size);
  z-index: var(--z-index-content);
  max-width: var(--content-inner-max-width);
  box-sizing: border-box;
}

#scroll {
  width: var(--scroll-block-width);
  justify-content: flex-end;
}

footer {
  width: 100%;
  height: auto;
  display: flex;
  flex-direction: column;
}

.bar {
  display: inline-flex;
  align-items: center;
  height: var(--bar-height);
  width: 100%;
  background-color: var(--color-background-light);
}

.commands {
  background-color: var(--color-window);
}

.block {
  height: 100%;
  padding: 0 var(--spacing-sm);
  display: inline-flex;
  align-items: center;
  color: var(--color-default-text);
}

input {
	background-color: transparent;
	border: none;
	color: var(--color-default-text);
	padding: 0;
	margin: 0;
	margin-left: var(--spacing-sm);
	height: var(--bar-height);
  font-size: var(--font-size);
  font-family: var(--font-family);
}

#command-input {
  flex: 1;
}

#keybinding-display {
  width: var(--keybinding-display-width);
  margin: 0;
}

.expand {
  flex: 1;
}

.row {
  display: flex;
  flex-direction: row;
  width: 100%;
  margin: var(--line-height) 0;
}

.align-right {
  justify-content: flex-end;
}

.block-primary {
  background-color: var(--color-primary);
  color: var(--color-accent-text);
}

.block-secondary {
  background-color: var(--color-secondary);
  color: var(--color-default-text);
}

.color-primary {
  color: var(--color-primary);
}

.color-secondary {
  color: var(--color-secondary);
}

pre[data-type="@ascii"] > pre {
  color: var(--color-primary);
  display: inline-flex; /* Keep the width the same as the width of the text */
}

pre[data-type="@ascii"] > h1 {
  display: none;
}

@media
only screen and (max-width: 750px),
only screen and (-webkit-min-device-pixel-ratio: 2)      and (min-width: 320px),
only screen and (   min--moz-device-pixel-ratio: 2)      and (min-width: 320px),
only screen and (     -o-min-device-pixel-ratio: 2/1)    and (min-width: 320px),
only screen and (        min-device-pixel-ratio: 2)      and (min-width: 320px),
only screen and (                min-resolution: 192dpi) and (min-width: 320px),
only screen and (                min-resolution: 2dppx)  and (min-width: 320px) {
  :root {
    --content-height: 100%;
    --content-max-height: unset;
    --content-width: 100%;
    --content-min-width: unset;
    --content-max-width: unset;
    --line-height: 20px;
    --content-inner-max-width: 100%;
    --gutter-width: 2em;
    --list-indent-width: var(--line-height);
  }

  #window {
    border: 0;
    flex: 1;
  }

  header {
    position: fixed;
    top: 0;
    left: 0;
    z-index: var(--z-index-fixed);
  }

  main {
    padding: 0;
    padding-top: calc(var(--bar-height) + var(--spacing-sm));
    padding-bottom: calc(var(--bar-height) * 2 + var(--spacing-sm));
  }

  #content {
    padding: 0 var(--spacing);
  }

  img, video {
    width: 100%;
    object-fit: cover;
  }

  footer {
    position: fixed;
    bottom: 0px;
    left: 0px;
    z-index: var(--z-index-fixed);
  }
}

@media screen and (max-width: 780px),
only screen and (-webkit-min-device-pixel-ratio: 2)      and (max-width: 800px),
only screen and (   min--moz-device-pixel-ratio: 2)      and (max-width: 800px),
only screen and (     -o-min-device-pixel-ratio: 2/1)    and (max-width: 800px),
only screen and (        min-device-pixel-ratio: 2)      and (max-width: 800px),
only screen and (                min-resolution: 192dpi) and (max-width: 800px),
only screen and (                min-resolution: 2dppx)  and (max-width: 800px) {
  pre[data-type="@ascii"] > pre {
    font-size: calc(var(--font-size)*0.7);
  }

  .tab > span:last-of-type {
    display: none;
  }
}

@media
only screen and (max-width: 500px),
only screen and (-webkit-min-device-pixel-ratio: 2)      and (max-width: 700px),
only screen and (   min--moz-device-pixel-ratio: 2)      and (max-width: 700px),
only screen and (     -o-min-device-pixel-ratio: 2/1)    and (max-width: 700px),
only screen and (        min-device-pixel-ratio: 2)      and (max-width: 700px),
only screen and (                min-resolution: 192dpi) and (max-width: 700px),
only screen and (                min-resolution: 2dppx)  and (max-width: 700px) {
  :root {
    --content-inner-max-width: 100%;
  }

  main {
    height: 100%;
  }

  #content {
    padding: 0 var(--spacing-sm);
  }

  #gutter {
    display: none;
  }

  #info {
    display: none
  }

  #file {
    flex: 1;
  }

  .tab > span:first-of-type, .tab > span:last-of-type {
    display: none;
  }

  pre[data-type="@ascii"] > pre {
    display: none;
  }

  pre[data-type="@ascii"] > h1 {
    display: flex;
  }
}

